--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -814,5 +814,8 @@
   "A single IP address can be used for a maximum of two KYC verifications": "Une seule adresse IP peut être utilisée au maximum deux fois pour les vérifications KYC.",
   "Check kyc failed, Please try again.": "La vérification KYC a échoué. Veuillez réessayer.",
   "One email can only be used for KYC verification once": "Une adresse e-mail ne peut être utilisée qu'une seule fois pour la vérification KYC",
-  "Obtain what the content of the last question in the above questions is about, and only output the content": "Déterminez de quoi il s'agit dans le contenu de la dernière question parmi les questions ci - dessus et ne présentez que le contenu"
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "Déterminez de quoi il s'agit dans le contenu de la dernière question parmi les questions ci - dessus et ne présentez que le contenu",
+  "Analyze based on the above YouTube search results:": "Analyser en fonction des résultats de recherche YouTube ci-dessus :",
+  "Analyze based on the above Twitter search results": "Analyser en fonction des résultats de recherche Twitter ci-dessus",
+  "Analyze based on the above web search results:": "Analyser en fonction des résultats de recherche web ci-dessus :"
 }
