--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -815,5 +815,8 @@
   "A single IP address can be used for a maximum of two KYC verifications": "単一の IP アドレスは、最大で 2 回の KYC 認証に使用できます。",
   "Check kyc failed, Please try again.": "KYC 認証に失敗しました。もう一度試してください。",
   "One email can only be used for KYC verification once": "1 つのメールアドレスは KYC 認証に 1 回しか使用できません",
-  "Obtain what the content of the last question in the above questions is about, and only output the content": "上記の質問の中で最後の質問の内容が何に関するものかを把握し、内容のみを出力してください"
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "上記の質問の中で最後の質問の内容が何に関するものかを把握し、内容のみを出力してください",
+  "Analyze based on the above YouTube search results:": "上記の YouTube 検索結果に基づいて分析する：",
+  "Analyze based on the above Twitter search results": "上記の Twitter 検索結果に基づいて分析する",
+  "Analyze based on the above web search results:": "上記のウェブ検索結果に基づいて分析する："
 }
