--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -815,5 +815,8 @@
   "A single IP address can be used for a maximum of two KYC verifications": "Um único endereço IP pode ser usado no máximo duas vezes para verificações KYC.",
   "Check kyc failed, Please try again.": "A verificação KYC falhou. Por favor, tente novamente.",
   "One email can only be used for KYC verification once": "Um endereço de e-mail só pode ser usado uma vez para a verificação KYC",
-  "Obtain what the content of the last question in the above questions is about, and only output the content": "Determine sobre o que se trata o conteúdo da última pergunta nas perguntas acima e apenas exiba o conteúdo"
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "Determine sobre o que se trata o conteúdo da última pergunta nas perguntas acima e apenas exiba o conteúdo",
+  "Analyze based on the above YouTube search results:": "Analisar com base nos resultados da pesquisa do YouTube acima:",
+  "Analyze based on the above Twitter search results": "Analisar com base nos resultados da pesquisa do Twitter acima",
+  "Analyze based on the above web search results:": "Analisar com base nos resultados da pesquisa na web acima:"
 }
