--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -814,5 +814,8 @@
   "A single IP address can be used for a maximum of two KYC verifications": "单个 IP 地址最多可用于两次 KYC 认证。",
   "Check kyc failed, Please try again.": "KYC 验证失败。请再次尝试。",
   "One email can only be used for KYC verification once": "一个邮件地址只能用于 KYC 验证一次",
-  "Obtain what the content of the last question in the above questions is about, and only output the content": "获取以上提问中最后一次提问的内容是关于什么的，只输出内容"
+  "Obtain what the content of the last question in the above questions is about, and only output the content": "获取以上提问中最后一次提问的内容是关于什么的，只输出内容",
+  "Analyze based on the above YouTube search results:": "根据以上 YouTube 搜索结果进行分析:",
+  "Analyze based on the above Twitter search results": "根据以上 Twitter 搜索结果进行分析:",
+  "Analyze based on the above web search results:": "根据以上网络搜索结果进行分析:"
 }
