更新提示语和 twitter内容

--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -816,7 +816,7 @@
   "Check kyc failed, Please try again.": "La verificación KYC ha fallado. Por favor, inténtelo de nuevo.",
   "One email can only be used for KYC verification once": "Una dirección de correo electrónico solo se puede utilizar una vez para la verificación KYC",
   "Obtain what the content of the last question in the above questions is about, and only output the content": "Determina de qué se trata el contenido de la última pregunta en las preguntas anteriores y solo muestra el contenido",
-  "Analyze based on the above YouTube search results:": "Analizar basado en los resultados de búsqueda de YouTube anteriores:",
-  "Analyze based on the above Twitter search results": "Analizar basado en los resultados de búsqueda de Twitter anteriores",
-  "Analyze based on the above web search results:": "Analizar basado en los resultados de búsqueda web anteriores:"
+  "Summarize based on the above YouTube search results:": "Resumir basado en los resultados de búsqueda de YouTube anteriores:",
+  "Summarize based on the above Twitter search results:": "Resumir basado en los resultados de búsqueda de Twitter anteriores:",
+  "Summarize based on the above web search results:": "Resumir basado en los resultados de búsqueda web anteriores:"
 }
