--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -817,7 +817,7 @@
   "Check kyc failed, Please try again.": "Die KYC-Prüfung ist fehlgeschlagen. Bitte versuchen Sie es erneut.",
   "One email can only be used for KYC verification once": "Eine E-Mail-Adresse kann nur einmal für die KYC-Verifizierung verwendet werden",
   "Obtain what the content of the last question in the above questions is about, and only output the content": "Ermitteln, worum es inhaltlich bei der letzten Frage in den obigen Fragen geht und geben Sie nur den Inhalt aus",
-  "Analyze based on the above YouTube search results:": "Analysieren Sie anhand der obigen YouTube-Suchergebnisse:",
-  "Analyze based on the above Twitter search results": "Analysieren Sie anhand der obigen Twitter-Suchergebnisse",
-  "Analyze based on the above web search results:": "Analysieren Sie anhand der obigen Websuchergebnisse:"
+  "Summarize based on the above YouTube search results:": "Zusammenfassen Sie anhand der obigen YouTube-Suchergebnisse:",
+  "Summarize based on the above Twitter search results:": "Zusammenfassen Sie anhand der obigen Twitter-Suchergebnisse:",
+  "Summarize based on the above web search results:": "Zusammenfassen Sie anhand der obigen Websuchergebnisse:"
 }
