--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -816,8 +816,8 @@
   "Check kyc failed, Please try again.": "",
   "One email can only be used for KYC verification once": "",
   "Obtain what the content of the last question in the above questions is about, and only output the content": "",
-  "Analyze based on the above YouTube search results:": "",
-  "Analyze based on the above Twitter search results": "",
-  "Analyze based on the above web search results:": ""
+  "Summarize based on the above YouTube search results:": "",
+  "Summarize based on the above Twitter search results:": "",
+  "Summarize based on the above web search results:": ""
 }
 
