--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -816,7 +816,7 @@
   "Check kyc failed, Please try again.": "Verifikasi KYC gagal. Silakan coba lagi.",
   "One email can only be used for KYC verification once": "Satu alamat email hanya dapat digunakan sekali untuk verifikasi KYC",
   "Obtain what the content of the last question in the above questions is about, and only output the content": "Tentukan tentang apa isi pertanyaan terakhir dalam pertanyaan di atas, dan hanya keluarkan isinya",
-  "Analyze based on the above YouTube search results:": "Analisis berdasarkan hasil pencarian YouTube di atas:",
-  "Analyze based on the above Twitter search results": "Analisis berdasarkan hasil pencarian Twitter di atas",
-  "Analyze based on the above web search results:": "Analisis berdasarkan hasil pencarian web di atas:"
+  "Summarize based on the above YouTube search results:": "Rangkum berdasarkan hasil pencarian YouTube di atas:",
+  "Summarize based on the above Twitter search results:": "Rangkum berdasarkan hasil pencarian Twitter di atas:",
+  "Summarize based on the above web search results:": "Rangkum berdasarkan hasil pencarian web di atas:"
 }
