--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -816,7 +816,7 @@
   "Check kyc failed, Please try again.": "KYC doğrulaması başarısız oldu. Lütfen tekrar deneyin.",
   "One email can only be used for KYC verification once": "Bir e-posta adresi sadece bir kez KYC doğrulaması için kullanılabilir",
   "Obtain what the content of the last question in the above questions is about, and only output the content": "Yukarıdaki sorulardan son sorunun içeriği hakkında ne olduğunu belirleyin ve yalnızca içeriği yazdırın",
-  "Analyze based on the above YouTube search results:": "Yukarıdaki YouTube arama sonuçlarına göre analiz yap:",
-  "Analyze based on the above Twitter search results": "Yukarıdaki Twitter arama sonuçlarına göre analiz yap",
-  "Analyze based on the above web search results:": "Yukarıdaki web arama sonuçlarına göre analiz yap:"
+  "Summarize based on the above YouTube search results:": "Yukarıdaki YouTube arama sonuçlarına göre özetleyin:",
+  "Summarize based on the above Twitter search results:": "Yukarıdaki Twitter arama sonuçlarına göre özetleyin:",
+  "Summarize based on the above web search results:": "Yukarıdaki web arama sonuçlarına göre özetleyin:"
 }
