--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -805,7 +805,7 @@
   "Check kyc failed, Please try again.": "Xác minh KYC đã thất bại. Vui lòng thử lại.",
   "One email can only be used for KYC verification once": "Một địa chỉ email chỉ có thể được sử dụng một lần cho việc xác minh KYC",
   "Obtain what the content of the last question in the above questions is about, and only output the content": "Xác định nội dung của câu hỏi cuối cùng trong các câu hỏi trên là về điều gì, và chỉ xuất nội dung",
-  "Analyze based on the above YouTube search results:": "Phân tích dựa trên kết quả tìm kiếm YouTube trên:",
-  "Analyze based on the above Twitter search results": "Phân tích dựa trên kết quả tìm kiếm Twitter trên",
-  "Analyze based on the above web search results:": "Phân tích dựa trên kết quả tìm kiếm trên web trên:"
+  "Summarize based on the above YouTube search results:": "Tóm tắt dựa trên kết quả tìm kiếm YouTube ở trên:",
+  "Summarize based on the above Twitter search results:": "Tóm tắt dựa trên kết quả tìm kiếm Twitter ở trên:",
+  "Summarize based on the above web search results:": "Tóm tắt dựa trên kết quả tìm kiếm trên web ở trên:"
 }
