--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -687,6 +687,7 @@
   "Download DeGPT to obtain rewards": "",
   "Switch Models": "",
   "Suitable for most tasks": "",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "",
   "Take photos to solve math problems": "",
   "Support image recognition": "",
   "Optimize code writing": "",
