--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -686,6 +686,7 @@
   "Download DeGPT to obtain rewards": "Téléchargez DeGPT pour obtenir des récompenses.",
   "Switch Models": "Changer de modèles",
   "Suitable for most tasks": "Adapté à la plupart des tâches",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "Adapté à la plupart des tâches, Performances comparables à celles de GPT-4o",
   "Take photos to solve math problems": "Prendre des photos pour résoudre des problèmes de mathématiques",
   "Support image recognition": "Prise en charge de la reconnaissance d'images",
   "Optimize code writing": "Optimiser l'écriture de code",
