--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -687,6 +687,7 @@
   "Download DeGPT to obtain rewards": "Unduh DeGPT untuk mendapatkan hadiah.",
   "Switch Models": "Ganti model",
   "Suitable for most tasks": "Cocok untuk sebagian besar tugas",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "Cocok untuk sebagian besar tugas, Kinerja sebanding dengan GPT-4o",
   "Take photos to solve math problems": "Mengambil foto untuk menyelesaikan masalah matematika",
   "Support image recognition": "Mendukung pengenalan gambar",
   "Optimize code writing": "Mengoptimalkan penulisan kode",
