--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -686,6 +686,7 @@
   "Download DeGPT to obtain rewards": "Загрузите DeGPT для получения вознаграждений.",
   "Switch Models": "Переключить модели",
   "Suitable for most tasks": "Подходит для большинства задач",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "Подходит для большинства задач, Производительность сравнима с GPT-4o",
   "Take photos to solve math problems": "Сделать фотографии для решения математических задач",
   "Support image recognition": "Поддерживает распознавание изображений",
   "Optimize code writing": "Оптимизировать написание кода",
