--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -686,6 +686,7 @@
   "Download DeGPT to obtain rewards": "ดาวน์โหลด DeGPT เพื่อรับรางวัล",
   "Switch Models": "สลับแบบจำลอง",
   "Suitable for most tasks": "เหมาะสำหรับงานส่วนใหญ่",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "เหมาะสำหรับงานส่วนใหญ่ ความสามารถเปรียบเทียบได้กับ GPT-4o",
   "Take photos to solve math problems": "ถ่ายรูปเพื่อแก้ปัญหาคณิตศาสตร์",
   "Support image recognition": "รองรับการจำแนกภาพ",
   "Optimize code writing": "ปรับปรุงการเขียนโค้ด",
