--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -687,6 +687,7 @@
   "Download DeGPT to obtain rewards": "Ödüller almak için DeGPT'yi indirin.",
   "Switch Models": "Model Değiştir",
   "Suitable for most tasks": "Çoğu görev için uygundur",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "Çoğu görev için uygundur, Performansı GPT-4o ile karşılaştırılabilir",
   "Take photos to solve math problems": "Matematik problemleri çözmek için fotoğraf çekmek",
   "Support image recognition": "Görüntü tanıma desteği sağlar",
   "Optimize code writing": "Kod yazımını optimize et",
