--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -687,6 +687,7 @@
   "Download DeGPT to obtain rewards": "Tải xuống DeGPT để nhận phần thưởng.",
   "Switch Models": "Chuyển đổi mô hình",
   "Suitable for most tasks": "Thích hợp cho hầu hết các nhiệm vụ",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "Phù hợp cho hầu hết các nhiệm vụ. Hiệu năng tương đương với GPT-4o",
   "Take photos to solve math problems": "Chụp ảnh để giải quyết các bài toán",
   "Support image recognition": "Hỗ trợ nhận dạng hình ảnh",
   "Optimize code writing": "Tối ưu hóa việc viết mã",
