--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -687,6 +687,7 @@
   "Download DeGPT to obtain rewards": "Descarga DeGPT para obtener recompensas.",
   "Switch Models": "Cambiar modelos",
   "Suitable for most tasks": "Adecuado para la mayoría de las tareas",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "Apto para la mayoría de las tareas, Rendimiento comparable al de GPT-4o",
   "Take photos to solve math problems": "Tomar fotos para resolver problemas de matemáticas",
   "Support image recognition": "Soporte para el reconocimiento de imágenes",
   "Optimize code writing": "Optimizar la escritura de código",
