--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -687,6 +687,7 @@
   "Download DeGPT to obtain rewards": "보상을 받기 위해 DeGPT를 다운로드하세요.",
   "Switch Models": "모델 전환",
   "Suitable for most tasks": "대부분의 작업에 적합합니다",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "대부분의 작업에 적합합니다, 성능은 GPT-4o 과 견줍니다",
   "Take photos to solve math problems": "수학 문제를 해결하기 위해 사진을 찍는다",
   "Support image recognition": "이미지 인식을 지원합니다",
   "Optimize code writing": "코드 작성 최적화합니다",
