--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -686,6 +686,7 @@
   "Download DeGPT to obtain rewards": "下载 DeGPT 以便获得奖励",
   "Switch Models": "切换模型",
   "Suitable for most tasks": "适用于大多数任务",
+  "Suitable for most tasks,Performance comparable to GPT-4o": "适用于大多数任务，性能比肩GPT-4o",
   "Take photos to solve math problems": "使用高级推理，可拍照解数学题",
   "Support image recognition": "支持图片识别",
   "Optimize code writing": "优化写代码功能",
